Fix filter list item right alignment

--- a/client/src/components/FilterList.scss
+++ b/client/src/components/FilterList.scss
@@ -30,7 +30,7 @@ $filter-select-width: 120px;
 
   .filter-input {
     height: to-rem(38px);
-    width: to-rem(280px);
+    width: to-rem(290px);
     position: absolute;
     left: to-rem($filter-select-left + $filter-select-width + 10px);
   }
